# M-vSWIM

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: create-segments-dataset.yml
src/: data.py  data_downloader.py  orbit_numbers.py  spacecraft-availability.py
src/messenger-solar-wind-gaps/: get-continous-solar-wind-lengths.py  solar-wind-and-magnetosheath-stints.py  solar-wind-stints.py
src/mvswim/: constants.py  scalling.py
src/mvswim/data/: __init__.py  data.py  data_downloader.py
src/mvswim/modelling/: __init__.py  gap_generator.py  model.py
src/notebooks/: spacecraft-trajectories.ipynb
src/scripts/: check_data.py  create-chunks-dataset.py  data-availability.py  lomb-scargle.py  plot_from_training_data.py  run_model.py  spacecraft-availability.py  spacecraft-overview-figure.py  workthrough.py
src/scripts/config/: .gitignore  example-config.py  example-config.toml
src/scripts/data-vis/: plot_data_chunks.py  trajectory-overview.py
src/scripts/messenger-solar-wind-gaps/: characterise-gaps-and-intervals.py  solar-wind-and-magnetosheath-stints.py  solar-wind-stints.py
src/vswim/: data.py  data_downloader.py  orbit_numbers.py  scalling.py
src/vswim/data/: data.py  data_downloader.py
src/vswim/modelling/: model.py
