[project]
name = "mercury-virtual-solar-wind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=6.1.7",
    "cdflib>=1.3.8",
    "check-shapes>=1.1.1",
    "gpflow>=2.5.2",
    "hermpy>=0.2.1",
    "ipykernel>=7.2.0",
    "numpy>=2.2.6",
    "nvidia-ml-py>=13.595.45",
    "polars>=1.38.1",
    "psutil>=7.2.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "setuptools<82",
    "spiceypy>=8.0.2",
    "sunpy>=6.0.6",
    "sunpy-soar>=1.11.1",
    "tensorboard>=2.20.0",
    "tensorflow[and-cuda]>=2.21.0",
    "tf-keras>=2.21.0",
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["src"]
